[gd_scene load_steps=3 format=3 uid="uid://sb4p6c8faysr"]

[ext_resource type="Script" path="res://OptionsMenu.gd" id="1_options"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w8p3r"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_options")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w8p3r")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Controls" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Controls"]
layout_mode = 2

[node name="ControlsContainer" type="VBoxContainer" parent="TabContainer/Controls/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Audio" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Audio"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MasterVolume" type="VBoxContainer" parent="TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/MasterVolume"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicVolume" type="VBoxContainer" parent="TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/MusicVolume"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/MusicVolume"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXVolume" type="VBoxContainer" parent="TabContainer/Audio/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Audio/VBoxContainer/SFXVolume"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="TabContainer/Audio/VBoxContainer/SFXVolume"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
